Layout issue 1

--- a/css/mycss.css
+++ b/css/mycss.css
@@ -1105,7 +1105,7 @@
 
 }
 
-@media screen and (max-width: 800px) and (orientation: landscape) and (min-height:550px) {
+@media screen and (max-width: 800px) and (orientation: landscape) {
     body {
         background-image: linear-gradient(to left, #1a1a1ac8, #1b1b1b);
         margin: auto;
